# VideoTimeline

./: .gitignore  CMakeLists.txt  readme.md
cmake/: Functions.cmake
src/: cutrect.cpp  cutrect.h  indicator.cpp  indicator.h  main.cpp  mainwindow.cpp  mainwindow.h  ruler.cpp  ruler.h  version.h  version.h.in  zoomer.cpp  zoomer.h
src/resource/: app.qss  timeline.qrc
src/v1/: indicator.h  keyline.h  keypoint.h  ruler.cpp  ruler.h
src/v1/resource/: app.qss  timeline1.qrc
src/v2/: main.cpp  mainwindow.cpp  mainwindow.h  timeline.cpp  timeline.h
src/v2/resource/: app.qss  timeline.qrc
v1/: CMakeLists.txt  keyline.cpp  keypoint.cpp  main.cpp  mainwindow.h  zoomer.h
v2/: CMakeLists.txt  audiolevelstask.cpp  audiolevelstask.h  commandhelper.cpp  commandhelper.h  main.cpp  mainwindow.cpp  mainwindow.h  qmlutilities.cpp  qmlutilities.h  qmlview.cpp  qmlview.h  scrubbar.cpp  scrubbar.h  thumbnailprovider.cpp  thumbnailprovider.h  timeline.cpp  timeline.h  timelinecommands.cpp  timelinecommands.h  timelinedatabase.cpp  timelinedatabase.h  timelinedock.cpp  timelinedock.h  timelineitems.cpp  timelineitems.h  timelinetrackmodel.cpp  timelinetrackmodel.h
v2/qml/: Clip.qml  Ruler.qml  Timeline.js  TimelineToolbar.qml  Track.js  Track.qml  ZoomSlider.qml  timeline.qml
v2/resource/: timeline.qrc
v2/resource/qml/: Clip.qml  Ruler.qml  Ruler.qmlc  Theme.js  Timeline.js  Timeline.jsc  TimelineToolbar.qml  TimelineToolbar.qmlc  Track.js  Track.qml  TrackListView.qml  ZoomSlider.qml  ZoomSlider.qmlc  timeline.qml  timeline.qmlc
